src/styles/expeditionPage.scss
/* ... */
#expedition-page-route-section {
    & > .expedition-page-route-card:nth-child(even) {
        & > .expedition-page-route-card-article {
            text-align: right;
            animation: pop-in-from-right cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
            animation-timeline: view();
            animation-range: cover 20% cover 50%;
            opacity: 0;
            transform: translateX(100%);
            right: calc(anchor(right --expd-route-card) + 2vw);
            
             
            & >  .expedition-page-route-card-activity {
                margin-left: auto;
            }
        }
    }
}
#expedition-page-information-section {
    width: 100%;
    margin-block: 1rem;
    justify-items: center;
    & > #expedition-page-information-requirements {
        padding:1rem 5%;
        background: $primary;
        margin-block-end: 0.5rem;
        width: 100%;
        border-radius: 0;
        justify-items: center;
        align-content: center;
        position: relative;
        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.425);

        animation: expd-info-req-animation cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
        animation-timeline: view();
        animation-range: cover 30%;
        & > h2 {
            width: max-content;
            padding-inline: 2%;
            background: inherit;
            text-align: center;
            anchor-name: --expd-info-heading;
            position: relative;
            z-index: 1;
            margin-block: 1vw;
        }
        
        & p {
            padding-left:1.5rem ;
            font-size: clamp(1rem, 1.4vw, 1.5rem);
        }

        &::after {
            content: "";
            position: absolute;
            width: 80%;
            height: 1vh;
            background: $accent;
            z-index: 0;
            top: calc(anchor(center --expd-info-heading) - 0.5vh);
            left: 50%;
            transform: translateX(-50%);
            clip-path: polygon(0% 50%, 1% 0%, 99% 0%, 100% 50%, 99% 100%, 1% 100%, 0% 50%);
            // margin-inline: auto;
        }
    }

    & > #expedition-page-information-precautions {
        background: #ede901;
        width: 100%;
        font-size: clamp(1rem, 1.4vw, 1.5rem);
        // border-radius: 1rem;
        padding: 1rem;
        border-top: 5px dashed black;
        border-bottom: 5px dashed black;
        // box-shadow: 0 0 0 5px rgb(141, 141, 0) inset;
        justify-items: center;
        & > p {
            width: 70%;
        }
    }
}

@keyframes expd-info-req-animation {
    to {
        width: 70%;
        border-radius: 10vw;
    }
}

@keyframes pop-in-from-left {
    80% {
        opacity: 0.1;
    }
    100% {
        opacity: 1;
        transform: translateX(0);
    }
}

@keyframes pop-in-from-right {
    0% {
        opacity: 0;
        transform: translateX(100%);
    }
    80% {
        opacity: 0.1;
    }
    100% {
        opacity: 1;
        transform: translateX(0);
    }
}


@keyframes circular-fade-in {
    0% {
        // mask-image: radial-gradient(circle at top left, 
        //                                 black, 
        //                                 black 20%, 
        //                                 transparent 20%
        //     );
            --mask-size: 20%;
        }
    20% {
        // mask-image: radial-gradient(circle at center center, 
        //                             black, 
        //                             black 40%, 
        //                             transparent 40%
        // );
        --mask-size: 40%;
    }
    100% {
        --mask-size: 100%;
        // mask-image: linear-gradient(black);
    }
}
// expedition-page-description-requirements-para-container

@media (max-width:700px) {
    #expedition-page-description-section {
        & > #expedition-page-description-section-brief-container {
            flex-direction: column-reverse;
            & > #expedition-page-description-section-map-img {
                width: 100%;
            }
            & > #expedition-page-description-section-brief-article{
                width: 100%;
                padding-block: 1rem;
                & > #expedition-page-description-section-brief {
                    width: 100%;
                }
            }
        }
        & > #expedition-page-description-information-wrapper {
            flex-direction: column;
            height: 100vh;
            & > article {
                width: 100%;
            }
        }
    }

    #expedtion-page-breif-details {
        flex-direction: column;
        height: max-content;
        & > span {
            width: 100%;
            padding: 3%;
        }
    }
    
    #expedition-page-information-section {
        padding: 2%;
        & > #expedition-page-information-requirements {
            width: 90%;
            animation: none;
            border-radius: 2rem;
        }
    }

    @keyframes expd-hero-article-translate {
        0% {
            top: 50%;
            left: 50%;
            transform:translate(-50%, -50%);
        }
        100% {
            transform: translate(-50%, 110%);
        }
    }
}

